--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <p>Please login to continue</p>
+        <p>Please login</p>
         <mat-form-field class="full-width-input">
           <input matInput placeholder="User" formControlName="userName" required>
           <mat-error *ngIf="isFieldInvalid('userName')">
