homepage coller aadd

--- a/src/app/Home/home/home.component.html
+++ b/src/app/Home/home/home.component.html
@@ -1,2 +1,2 @@
 <h1 style="color: red;">Home page</h1>
-<h2>welcome to home page</h2>
+<h2 style="color: rgb(38, 0, 255);">welcome to home page</h2>
